[package]
name = "project_euler"
version = "0.1.0"
authors = ["Thrigger <21341498+Thrigger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrigger_primes  = {git = "https://github.com/Thrigger/thrigger_primes.git", branch = "main"}
thrigger_support = {git = "https://github.com/Thrigger/thrigger_support.git", branch = "main"}
